src/tests/fixtures/typename/PropertySignatureTypenameIncorrectName.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class User implements IPerson {
  __typename: "Group";
  /** @gqlField */
  name: string;
}

/** @gqlInterface */
export interface IPerson {
  /** @gqlField */
  name: string;
}

-----------------
OUTPUT
-----------------
-- Error Report --
src/tests/fixtures/typename/PropertySignatureTypenameIncorrectName.ts:3:15 - error: Expected `__typename` property to be `"User"`. This is needed to ensure Grats can determine the type of this object during GraphQL execution.

3   __typename: "Group";
                ~~~~~~~


-- Code Action: "Create Grats-compatible `__typename` type" (fix-typename-type) --
- Original
+ Fixed

@@ -2,3 +2,3 @@
  export class User implements IPerson {
-   __typename: "Group";
+   __typename: "User";
    /** @gqlField */